syntax = "proto3";
package pb.storage;

option go_package = "pb/storage";

message Object {
  string id = 1;
  string file_name = 2;
  string type = 3;
  string signed_url = 4;
  string expired_at = 5;
  bool is_public = 6;
  string uploaded_by = 7;
  string created_at = 8;
}

message GetObjectByIDRequest {
  string user_id = 1;
  string object_id = 2;
}
